# LLM_FINAL_PROJECT

./: README.md  WRITEUP.md  config.yaml  data.py  download_data.py  experiment.py  main.py  pyproject.toml  results.json  test.py
data/: trivia_train.json  trivia_val.json  truthful_qa.json  wikitext.json
sae-factual-amnesia/: data.py  download_data.py  experiment.py  main.py
