[project]
name = "sae-factual-amnesia"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.1.0",
    "transformer-lens>=1.19.0",
    "sae-lens>=3.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sae_factual_amnesia"]

[dependency-groups]
dev = []