[project]
name = "sae-factual-amnesia"
version = "0.1.0"
requires-python = ">=3.11,<3.14"

dependencies = [
    "torch==2.6.0",
    "torchvision",
    "torchaudio",
    "transformer-lens>=1.19.0",
    "sae-lens>=3.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "numpy>=1.26.0",
    "pyarrow<18.0",
    "pyyaml>=6.0",

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sae_factual_amnesia"]

[dependency-groups]
dev = []

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }